--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "googleapis": "^39.2.0",
     "joi": "^14.3.1",
     "mysql": "^2.17.1",
-    "googleapis": "^39.2.0"
+    "swig": "^1.4.2"
   }
 }
